# aqiu

./: .gitignore  AGENTS.md  Cargo.toml  README.md  index.html  mihomo_error.txt  package-lock.json  package.json  vite.config.ts
.github/: CI_CONFIG_NOTE.md  CI_FIX_SUMMARY.md  PLATFORM_SUPPORT_ANALYSIS.md  RELEASE_FIX_NOTES.md  SECRETS_SETUP.md  WINDOWS_COMPLETE_IMPLEMENTATION.md  WINDOWS_COMPLETION_SUMMARY.md  WINDOWS_FINAL_IMPLEMENTATION.md  WINDOWS_IMPLEMENTATION_SUMMARY.md  setup_secrets.sh
.github/workflows/: ci.yml
crates/aqiu-service/: Cargo.toml
crates/aqiu-service-ipc/: Cargo.toml
crates/aqiu-service-ipc/src/: client.rs  error.rs  lib.rs  protocol.rs  server.rs  server_windows.rs
crates/aqiu-service/src/: core_manager.rs  handler.rs  log_collector.rs  main.rs
docs/: dns.md  tun.md
resources/: aqiu-service-install.sh  aqiu-service-uninstall.sh  config.yaml  install-service.sh  set_dns.sh  uninstall-service.sh  unset_dns.sh
script/: make_icons.py  pyproject.toml
script/icons/: icon.icns
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  profiles.rs  service.rs  user_overrides.rs
src-tauri/src/core/: base.rs  macos_and_lifecycle.rs  mod.rs  proxy_and_mode.rs  tun.rs  windows.rs
src/api/: mihomo.ts  profiles.ts  tauri.ts  userOverrides.ts
src/assets/: style.css
src/components/: DialogContainer.vue  ProfilesManager.vue  ToastContainer.vue
src/composables/: useCore.ts  useDialog.ts  useI18n.ts  useMihomo.ts  useProfiles.ts  useTheme.ts  useToast.ts  useTray.ts
src/utils/: platform.ts
src/views/: Connections.vue  Dashboard.vue  Logs.vue  Proxies.vue  Rules.vue  Settings.vue
tests/: mihomo.test.ts
