[workspace]
resolver = "2"
members = [
    "src-tauri",
    "crates/aqiu-service-ipc",
    "crates/aqiu-service",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["AQiu Team"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"

