[package]
name = "aqiu"
version = "0.1.0"
description = "AQiu - A Modern Mihomo Client"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "aqiu_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "image-ico"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full", "process"] }
reqwest = { version = "0.12", features = ["json"] }
dirs = "5"
zip = "7.0.0"
serde_yaml = "0.9.34"
chrono = "0.4.42"
tauri-plugin-autostart = "2.5.1"
flate2 = "1.1.5"
base64 = "0.22"
urlencoding = "2.1"
tauri-plugin-os = "2"
arboard = "3"
tauri-plugin-clipboard-manager = "2"
# IPC for service communication
aqiu-service-ipc = { path = "../crates/aqiu-service-ipc", features = ["client"] }
tauri-plugin-shell = "2"
