[package]
name = "aqiu-service-ipc"
version = "0.1.0"
edition = "2021"
description = "IPC protocol and client/server for aqiu-service"
authors = ["AQiu Team"]

[features]
default = []
client = []
server = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["net", "io-util", "sync", "time", "rt"] }
thiserror = "1"
tracing = "0.1"
async-trait = "0.1"

[target.'cfg(windows)'.dependencies]
tokio = { version = "1", features = [
    "net",
    "io-util",
    "sync",
    "time",
    "rt",
    "io-std",
] }
winapi = { version = "0.3", features = [
    "winbase",
    "namedpipeapi",
    "handleapi",
    "errhandlingapi",
    "winerror",
] }
